fixed title wrap

--- a/srch-website/src/styles/MarkdownPage.css
+++ b/srch-website/src/styles/MarkdownPage.css
@@ -176,7 +176,6 @@
   font-size: 35px;
   line-height: 40px;
   color: var(--color-header);
-  white-space: nowrap;
   margin: 0;
   padding-top: 12px;
   padding-bottom: 12px;
